--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,8 +47,11 @@ dependencies {
 
     //ViewModel e Livedata
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.8'
+
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.google.code.gson:gson:2.9.0'
 
     //Glide - biblioteca de carregamentod de imagem
     implementation 'com.github.bumptech.glide:glide:4.13.0'
